Enviando arquivos atualizados

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -79,7 +80,7 @@
 <header>
   <div class="container">
     <div class="intro-text">
-      <div class="intro-lead-in">Ligue agora ou envie um Whatsapp - 24 horas</div>
+      <div class="intro-lead-in">Ligue agora ou envie um Whatsapp - de 06h à meia-noite</div>
       <div class="intro-heading">21 98282-7299</div>
       <a href="#contact" class="page-scroll logo"><img src="img/logo.png" alt="Lopez Reboque"></a>
     </div>
@@ -102,7 +103,7 @@
           <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
         </span>
         <h4 class="service-heading">Veículos pesados</h4>
-        <p class="text-muted description">Transportamos veículos de até 10 toneladas em plataforma de 6 metros</p>
+        <p class="text-muted description">Transportamos veículos de até 4 toneladas em plataforma de 6 metros</p>
       </div>
       <div class="icon-marketing">
         <span class="fa-stack fa-4x">
@@ -126,7 +127,7 @@
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-clock-o fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Atendimento 24 horas</h4>
+          <h4 class="service-heading">06h à meia-noite</h4>
           <p class="text-muted description">Atendemos em todo o Rio de Janeiro de segunda a segunda</p>
         </div>
         <div class="icon-marketing">
@@ -263,7 +264,7 @@
             <h5 class="subheading">Motorista profissional com 18 anos de experiência</h5>
           </div>
           <div class="timeline-body">
-            <p class="text-muted">Cordialidade e pontualidade no atendimento, operamos em toda cidade do Rio de Janeiro, 24 horas todos os dias. Transportamos seu automóvel, motocicleta ou caminhão com segurança e cuidado até o destino de sua escolha.</p>
+            <p class="text-muted">Cordialidade e pontualidade no atendimento, operamos em toda cidade do Rio de Janeiro, das 06h à meia-noite todos os dias. Transportamos seu automóvel, motocicleta ou caminhão com segurança e cuidado até o destino de sua escolha.</p>
           </div>
         </div>
       </div>
@@ -378,7 +379,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Contato</h2>
-        <h3 class="section-subheading text-muted">Atendemos 24 horas a toda cidade do Rio de Janeiro.</h3>
+        <h3 class="section-subheading text-muted">Atendemos das 06h à meia-noite a toda cidade do Rio de Janeiro.</h3>
       </div>
     </div>
     <div class="row">
@@ -404,40 +405,16 @@
               </div>
               <span class='smaller'>marcelolopez.002@gmail.com</span>
             </li>
+            <li class='contact-item'>
+              <div class='icon-circle'>
+                <i class='fa fa-google'></i>
+              </div>
+              <span class='smaller'><a class='link_google_negocios' href="https://g.co/kgs/4rR1Tf">Google Negócios</a></span>
+            </li>
           </ul>
         </div>
         <div class='col-lg-6'>
-
-          <form name="sentMessage" id="contactForm" novalidate>
-            <div class="row">
-              <p class='help-text'>Ou deixe uma mensagem que responderemos em breve</p>
-              <!-- <div class="col-md-6"> -->
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Nome" id="name" required data-validation-required-message="Por favor, informe seu nome.">
-                <p class="help-block text-danger"></p>
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control" placeholder="E-mail *" id="email" required data-validation-required-message="Por favor, informe seu e-mail de contato">
-                <p class="help-block text-danger"></p>
-              </div>
-              <div class="form-group">
-                <input type="tel" class="form-control" placeholder="Telefone *" id="phone" required data-validation-required-message="Por favor, informe seu telefone">
-                <p class="help-block text-danger"></p>
-              </div>
-              <!-- </div> -->
-              <!-- <div class="col-md-6"> -->
-              <div class="form-group">
-                <textarea class="form-control" placeholder="Sua mensagem *" id="message" required data-validation-required-message="Deixe uma mensagem."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-              <!-- </div> -->
-              <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button type="submit" class="btn btn-xl">Enviar</button>
-              </div>
-            </div>
-          </form>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14699.426777270146!2d-43.236696!3d-22.918656!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x802d569f11094117!2sLopez+Reboque!5e0!3m2!1spt-BR!2sbr!4v1508777248179" width="450" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
